sandbox/output
MedicineClashTest.java:33: error: cannot find symbol
            new Prescription(LocalDate.now().minusDays(30), 
                             ^
  symbol:   variable LocalDate
  location: class MedicineClashTest
MedicineClashTest.java:35: error: constructor Medicine in class Medicine cannot be applied to given types;
        medicines.add(new Medicine("Codeine", prescriptions));
                      ^
  required: no arguments
  found: String,Set<Prescription>
  reason: actual and formal argument lists differ in length
2 errors
